<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLanCate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_category"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/language"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@+id/tvLanCate"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/clLan"
        android:layout_marginTop="@dimen/item_margin_top">

        <TextView
            android:id="@+id/tvMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tvMin"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/clMin"
        android:layout_marginTop="@dimen/item_margin_top">

        <TextView
            android:id="@+id/tvSortStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/asc_sort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSortDivider"/>

        <TextView
            android:id="@+id/tvSortDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_divider"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tvSortStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSortTitle"/>

        <TextView
            android:id="@+id/tvSortTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            app:layout_constraintEnd_toStartOf="@+id/tvSortDivider"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvClock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/clSort"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/item_margin_top"/>

</androidx.constraintlayout.widget.ConstraintLayout>